Jun 13, 2022
  code cleanup

Jun 10, 2022
  BulkGeneRename: better logging
  BulkGeneMerge: better logging

Jun 03, 2022
  BulkGeneRename: better qc

Jun 02, 2022
  updated BulkGeneMerge
  added BulkGeneRename

Mar 10, 2022
  added log 'aliases'

Dec 16, 2021
  improved logging

Dec 14, 2021
  updated log4j to avoid zero day vulnerability

Aug 26, 2021
  RnaSeqLoader: updated to handle new FTP file structure at NCBI

Mar 09, 2021
  BulkGeneLoader: updated to do bulk merge for rn7 genes

Jan 04, 2021
  fixed NullPointerException in RnaSeqLoader and ProteinSeqLoader

Jul 24, 2020
  moved maintenance module GeneReactivator from legacy 'gene-loading-pipeline'

May 10, 2020
  updated jar dependencies

Jan 09, 2020
  log names for gene history harmonized with other pipeline logs

Feb 18, 2019, v.2.1.8
  sequence loaders: abort if sequence fasta files are not available

Feb 11, 2019, v.2.1.7
  migrated NcbiGeneHistoryLoader and BulkGeneMerger from gene-loading pipeline

Nov 20, 2018, v.2.1.6
  updated code to use new sequence API from rgdcore lib
  rna seq loader: refactored code to significantly speed up the loader

Oct 15, 2018, v.2.1.5
  fixed bug introduced in the previous release

Oct 08, 2018, v.2.1.4
  code refactored: created RnaSeqLoader and ProteinSeqLoader classes, with the common code still residing in SeqLoader class
  ProteinSeqLoader: implemented sequence history: when a reference sequence changes, we keep the old sequence
    with seq_type 'old_ncbi_protein', and add the new sequence with seq_type 'ncbi_protein'

Sep 21, 2018, v.2.1.3
  moved from subversion to github

Aug 28, 2018, v.2.1.2
  rna sequence loader: first release

Aug 8, 2018, v.2.1.1
  protein sequence loader: logging tune up
  optimized sql queries to reduce running time by 20-30%

Aug 7, 2018, v.2.1.0
  protein sequence loader: totally new code, utilizes protein sequence files in fasta format from RefSeq

Aug 2, 2018, v.2.0.0